force-app/main/default/objects/Purchasing__c/Purchasing__c.object-meta.xml
<CustomObject>
    <label>Purchasing / Order Mgmt.</label>
    <nameField>
        <label>Purchasing Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchasing / Order Mgmt.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>