force-app/main/default/objects/Purchasing__c/fields/BillerAccountProjectNr__c.field-meta.xml
<CustomField>
    <fullName>BillerAccountProjectNr__c</fullName>
    <description>Mapping ID for Suppplier Cost to Purchasing Mapping via Trigger</description>
    <formula>Account__r.Id &amp;&quot;_&quot;&amp; Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biller Account Project Nr.</label>
    <type>Text</type>
</CustomField>