force-app/main/default/objects/Purchasing__c/fields/NotOrdered__c.field-meta.xml
<CustomField>
    <fullName>NotOrdered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Ordered</label>
    <type>Checkbox</type>
</CustomField>