force-app/main/default/objects/Purchasing__c/fields/OrderAmountNet__c.field-meta.xml
<CustomField>
    <fullName>OrderAmountNet__c</fullName>
    <label>Order Amount Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>