force-app/main/default/objects/Purchasing__c/fields/PONr__c.field-meta.xml
<CustomField>
    <fullName>PONr__c</fullName>
    <label>PO Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>